what we do section was added, but need some corrections

--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -1,18 +1,18 @@
 @import url("https://fonts.googleapis.com/css2?family=DM+Sans:opsz,wght@9..40,300;9..40,400;9..40,500;9..40,600;9..40,700;9..40,800&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400;500;600;700;800&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 html {
   font-size: 62.5%;
-
-  @apply overflow-x-hidden;
+  overflow-x: hidden;
 }
 
 html,
 :root,
 body {
-  @apply h-full w-full box-border m-0 p-0 bg-black text-white max-h-[100vh] min-h-[100vh];
+  @apply h-full w-full box-border m-0 p-0 bg-black text-white ;
 }
 ul {
   @apply m-0 p-0;
