--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -12,7 +12,7 @@ html {
 html,
 :root,
 body {
-  @apply h-full w-full box-border m-0 p-0 bg-black text-white ;
+  @apply h-full w-full box-border m-0 p-0 ;
 }
 ul {
   @apply m-0 p-0;
