data for articles was added. Top part of Article component is done

--- a/frontend/src/pages/Services/styles.module.scss
+++ b/frontend/src/pages/Services/styles.module.scss
@@ -1,3 +1,6 @@
+.service-padding {
+  @apply px-[3rem] sm:px-[7rem] lg:px-[10rem] 2xl:px-[17rem];
+}
 .gradient {
   background-clip: text;
   -webkit-text-fill-color: transparent;
